# small-benchmarks

./: README.md  pyproject.toml
kv-store/: README.md  main.py  pyproject.toml
pyarrow-conversions/: README.md  main.py  pyproject.toml
