[tool.poetry]
name = "kv-store-benchmarks"
version = "0.1.0"
description = ""
authors = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
