[tool.poetry]
name = "small-benchmarks"
version = "0.1.0"
description = ""
authors = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^12.0.1"
polars = "^0.18.2"
pandas = "^2.0.2"
ruff = "^0.0.272"
black = "^23.3.0"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
