[project]
    authors         = [{ name = "Lucas Parzianello" }]
    dependencies    = ["black>=24.8.0", "pandas>=2.2.2", "polars>=1.6.0", "psutil>=6.0.0", "pyarrow>=17.0.0"]
    description     = ""
    name            = "small-benchmarks"
    readme          = "README.md"
    requires-python = ">=3.12,<3.13"
    version         = "0.1.0"
